# Restapiserver_mongoose

./: CMakeLists.txt  README.md  main.cpp
Client/: CMakeLists.txt  main.cpp
Client/Include/: restapiclient.h
Client/Source/: restapiclient.cpp
Include/: linuxinfo.h
Server/Include/: restapihandler.h
Server/Source/: linuxinfo.cpp  restapihandler.cpp
Source/: linuxinfo.cpp  restapihandler.cpp
